# batalla_naval

./: .gitignore  CMakeLists.txt  README.md  main  main.cpp  nada.cpp
code/: Batalla_Naval  CMakeLists.txt  Historial.txt  compile.sh  main.cpp  tempCodeRunnerFile.cpp
code/Historial/: nada.txt
code/lib/headers/: barco.h  juegos.h  jugador.h  monitor.h  tablero.h
code/lib/src/: barco.cpp  juegos.cpp  jugador.cpp  tablero.cpp
